fix: adjust menu position for improved visibility
- Changed the menu container's top position from 27px to 100px to enhance visibility and accessibility in the header layout.

--- a/src/app/components/molecules/header/menu/menu.component.scss
+++ b/src/app/components/molecules/header/menu/menu.component.scss
@@ -28,7 +28,7 @@
 
 .menu-container {
     position: absolute;
-    top: 27px;
+    top: 100px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
